DarkMode autoMatch Os Theme set to false

--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,8 @@
 var options = {
 
   label: '🌓', // default: ''
-  autoMatchOsTheme: true, // default: true
-  autoMatchOsTheme: true
+  autoMatchOsTheme: false, // default: true
+ 
 }
 
 const darkmode = new Darkmode(options);
