--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <title>Favour - Personal Website</title>
 </head>
 
-<body style="font-family: 'Playfair Display', serif; background-color:#ffffff; padding: 0 50px">
+<body style="font-family: 'Playfair Display', serif; background-color:#ffffff; margin:0">
   <noscript>
     <strong>We're sorry but personal doesn't work properly without JavaScript enabled. Please enable it to
       continue.</strong>
