removed dark mode

--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,12 @@
 
   
   <style>
-    @import url('https://fonts.googleapis.com/css?family=Playfair+Display&display=swap');
-  </style>
+    @import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap');
+    </style>
   <title>Favour - Personal Website</title>
 </head>
 
-<body style="font-family: 'Playfair Display', serif; background-color:#ffffff; margin:0">
+<body style="font-family: 'IBM Plex Sans', sans-serif; background-color:#ffffff; margin:0">
   <noscript>
     <strong>We're sorry but personal doesn't work properly without JavaScript enabled. Please enable it to
       continue.</strong>
@@ -31,8 +31,8 @@ var options = {
  
 }
 
-const darkmode = new Darkmode(options);
-darkmode.showWidget();
+//const darkmode = new Darkmode(options);
+//darkmode.showWidget();
 </script>
 </body>
 
